# Advent_of_code

./: .gitignore  CMakeLists.txt
1/: CMakeLists.txt  main.cpp
10/: main.cpp
13/: main.cpp
14/: CMakeLists.txt
15/: CMakeLists.txt  main.cpp
16/: CMakeLists.txt  main.cpp
18/: CMakeLists.txt  main.cpp
2/: CMakeLists.txt  main.cpp
2024/: CMakeLists.txt
2024/10/: CMakeLists.txt
2024/13/: CMakeLists.txt
2024/14/: main.cpp
2024/17/: -Notiz-03-04.xopp  CMakeLists.txt  main.cpp
2024/5/: main.cpp
2024/6/: main.cpp
2024/8/: main.cpp
2025/: Cargo.toml
2025/src/10_factory/: main.rs
2025/src/1_secret_entrance/: main.rs
2025/src/2_gift_shop/: main.rs
2025/src/3_lobby/: main.rs
2025/src/4_printing_department/: main.rs
2025/src/5_cafeteria/: main.rs
2025/src/6_trash_compactor/: main.rs
2025/src/7_laboratories/: main.rs
2025/src/8_playground/: main.rs
2025/src/9_movie_theater/: main.rs
3/: CMakeLists.txt  main.cpp
4/: CMakeLists.txt  main.cpp
5/: CMakeLists.txt
6/: CMakeLists.txt
7/: CMakeLists.txt  main.cpp
8/: CMakeLists.txt
9/: CMakeLists.txt  main.cpp
lib/: Vec2.hpp  fileRead.hpp
